lesson_1_k8s_init/k8s/init-ms-otus-lesson-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otus-ms-lesson-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-checker
  namespace: otus-ms-lesson-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-checker
  template:
    metadata:
      labels:
        app: health-checker
    spec:
      containers:
        - name: health-checker
          image: mornimf/otus-health-checker-js
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: entrypoint
  namespace: otus-ms-lesson-1
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: health-checker
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: otus-ms-lesson-1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: entrypoint
                port:
                  number: 8000
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
#metadata:
#  name: rewrite-ingress
#  namespace: otus-ms-lesson-1
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#spec:
#  rules:
#    - host: arch.homework
#      http:
#        paths:
#          - pathType: Prefix
#            backend:
#              service:
#                name: entrypoint
#                port:
#                  number: 8000
#            path: /otusapp/aleksey.morozov/(/|$)(.*)
